--- a/_posts/2018-09-13-title.markdown
+++ b/_posts/2018-09-13-title.markdown
@@ -21,8 +21,7 @@ description: First step to the loan process with Anand
 	</tr>
 	<tr valign="top">
 		<td width="50%" style="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
-			<p><input type="text" id="input01" placeholder="Name: eg. John Smith"/>
-</p>
+			<p><input type="text" id="input01" placeholder="Name: eg. John Smith"/></p>
 		</td>
 		<td width="50%" style="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0.04in">
 			<p><input type="text" id="input02" placeholder="Today's Date: eg. 12/12/2018"/></p>
@@ -274,6 +273,7 @@ Date
 Lender
 __________________________ Date ________________<br/><br/>
   <input type='submit' value='Submit for Approval'  onclick="myJsFunction()"/>
+  </form>
 <!-- <button>Submit for Approval</button> -->
 <script type="text/javascript">
  function myJsFunction(){
