--- a/_posts/2018-09-13-title.markdown
+++ b/_posts/2018-09-13-title.markdown
@@ -31,7 +31,7 @@ description: First step to the loan process with Anand
 			<p><input type="text" id="input03" name="Borrower Address" placeholder="Address eg. 123 Providence Blvd."/></p>
 		</td>
 		<td width="50%" style="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0.04in">
-			<p><input type="text" id="input04" name="Borrower Birthdate placeholder="Birthdate: eg. 12/16/1995"/></p>
+			<p><input type="text" id="input04" name="Borrower Birthdate" placeholder="Birthdate: eg. 12/16/1995"/></p>
 		</td>
 	</tr>
 	<tr valign="top">
